swap_pending_list 와 관련된 ref-link 오류 수정. sh exec_test.sh runtime/logging/SafepointTest