@@ -36,7 +36,43 @@
 # sh exec_test.sh gc/TestSoftReferencesBehaviorOnOOME
 #  assert(Universe::is_in_heap(result)) failed: object not in heap 0x00000007f8000000
 
-pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/scratch/0 && \
+# pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/scratch/0 && \
+# HOME=/Users/zeedh \
+# JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
+# LANG=en_US.UTF-8 \
+# LC_ALL=C \
+# PATH=/bin:/usr/bin:/usr/sbin \
+# TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
+#     /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/javac \
+#         -J-XX:MaxRAMPercentage=6.25 \
+#         -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/tmp \
+#         -J-Djava.library.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+#         -J-Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/tmp' \
+#         -J-Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/tmp' \
+#         -J-Dtest.compiler.opts= \
+#         -J-Dtest.java.opts= \
+#         -J-Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+#         -J-Dcompile.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+#         -J-Dtest.timeout.factor=4.0 \
+#         -J-Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+#         -J-Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg \
+#         -J-Dtest.name=serviceability/jvmti/RedefineClasses/TestMultipleClasses.java \
+#         -J-Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/serviceability/jvmti/RedefineClasses/TestMultipleClasses.java \
+#         -J-Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/serviceability/jvmti/RedefineClasses \
+#         -J-Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/serviceability/jvmti/RedefineClasses:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+#         -J-Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/classes/0/serviceability/jvmti/RedefineClasses/TestMultipleClasses.d \
+#         -J-Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/classes/0/serviceability/jvmti/RedefineClasses/TestMultipleClasses.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/classes/0/test/lib \
+#         -J-Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/serviceability/jvmti/RedefineClasses:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/classes/0/test/lib \
+#         -J-Dtest.modules='java.base/jdk.internal.misc java.compiler java.instrument jdk.jartool/sun.tools.jar' \
+#         --add-modules java.base,java.compiler,java.instrument,jdk.jartool \
+#         --add-exports java.base/jdk.internal.misc=ALL-UNNAMED \
+#         --add-exports jdk.jartool/sun.tools.jar=ALL-UNNAMED \
+#         -d /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/classes/0/test/lib \
+#         -sourcepath /Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+#         -classpath /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_RedefineClasses_TestMultipleClasses_java/classes/0/test/lib /Users/zeedh/slowcoders/jdk-rtgc/test/lib/RedefineClassHelper.java
+
+
+pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/scratch/0 && \
 HOME=/Users/zeedh \
 JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
 LANG=en_US.UTF-8 \
@@ -44,9 +80,10 @@ LC_ALL=C \
 PATH=/bin:/usr/bin:/usr/sbin \
 TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
     /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/java \
-       -XX:+UnlockExperimentalVMOptions \
-        -Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/tmp' \
-        -Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/tmp' \
+      -XX:+UnlockExperimentalVMOptions \
+      -XX:AbortVMOnExceptionMessage='java/lang/ref/WeakReference' \
+        -Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/tmp' \
+        -Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/tmp' \
         -Dtest.compiler.opts= \
         -Dtest.java.opts= \
         -Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
@@ -54,13 +91,13 @@ TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastd
         -Dtest.timeout.factor=4.0 \
         -Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
         -Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg \
-        -Dtest.name=runtime/Safepoint/TestAbortOnVMOperationTimeout.java \
-        -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Safepoint/TestAbortOnVMOperationTimeout.java \
-        -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Safepoint \
-        -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Safepoint:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
-        -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/classes/0/runtime/Safepoint/TestAbortOnVMOperationTimeout.d \
-        -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/classes/0/runtime/Safepoint/TestAbortOnVMOperationTimeout.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/classes/0/test/lib \
-        -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/classes/0/runtime/Safepoint/TestAbortOnVMOperationTimeout.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Safepoint:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/classes/0/test/lib \
+        -Dtest.name=runtime/logging/SafepointTest.java \
+        -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/logging/SafepointTest.java \
+        -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/logging \
+        -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/logging:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/classes/0/runtime/logging/SafepointTest.d \
+        -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/classes/0/runtime/logging/SafepointTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/classes/0/test/lib \
+        -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/classes/0/runtime/logging/SafepointTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/logging:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/classes/0/test/lib \
         -Dtest.modules='java.base/jdk.internal.misc java.management' \
-        -classpath /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/classes/0/runtime/Safepoint/TestAbortOnVMOperationTimeout.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Safepoint:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Safepoint_TestAbortOnVMOperationTimeout_java/classes/0/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
-        TestAbortOnVMOperationTimeout
+        -classpath /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/classes/0/runtime/logging/SafepointTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/logging:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_logging_SafepointTest_java/classes/0/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
+        SafepointTest
